{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 1312,
  "lineage": "85b235fb-2662-4ac8-7623-81ec2d822186",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d24a9867dd408bf4",
            "association_id": "eipassoc-0b81d7cd1d3d90fe8",
            "domain": "vpc",
            "id": "eipalloc-0d24a9867dd408bf4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-098fc9422877765d4",
            "private_dns": "ip-141-0-1-124.ec2.internal",
            "private_ip": "141.0.1.124",
            "public_dns": "ec2-3-94-12-173.compute-1.amazonaws.com",
            "public_ip": "3.94.12.173",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-0"
            },
            "tags_all": {
              "Name": "eip-0"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0efc55f00cbd09f21",
            "association_id": "eipassoc-0de42f6718ffee730",
            "domain": "vpc",
            "id": "eipalloc-0efc55f00cbd09f21",
            "network_border_group": "us-east-1",
            "network_interface": "eni-031909fc307550bc7",
            "private_dns": "ip-141-0-2-92.ec2.internal",
            "private_ip": "141.0.2.92",
            "public_dns": "ec2-52-205-87-87.compute-1.amazonaws.com",
            "public_ip": "52.205.87.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-1"
            },
            "tags_all": {
              "Name": "eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "i_gateway",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982063376835:internet-gateway/igw-04061ac732fef96b6",
            "id": "igw-04061ac732fef96b6",
            "owner_id": "982063376835",
            "tags": {
              "Name": "i_gateway"
            },
            "tags_all": {
              "Name": "i_gateway"
            },
            "vpc_id": "vpc-081eb28a7eb606c26"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nats",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d24a9867dd408bf4",
            "connectivity_type": "public",
            "id": "nat-07e22053a30db771c",
            "network_interface_id": "eni-098fc9422877765d4",
            "private_ip": "141.0.1.124",
            "public_ip": "3.94.12.173",
            "subnet_id": "subnet-0564a220edf14ef44"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0efc55f00cbd09f21",
            "connectivity_type": "public",
            "id": "nat-0f0bf9f9321a7fe34",
            "network_interface_id": "eni-031909fc307550bc7",
            "private_ip": "141.0.2.92",
            "public_ip": "52.205.87.87",
            "subnet_id": "subnet-0b324e15ab8f01d86"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ac2bc9f18bee32381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07e22053a30db771c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ac2bc9f18bee3238",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_nat_gateway.nats",
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06de3c3992c3d68001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f0bf9f9321a7fe34",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06de3c3992c3d6800",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_nat_gateway.nats",
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04061ac732fef96b6",
            "id": "r-rtb-01b994bed192a5e101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01b994bed192a5e10",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_tables",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982063376835:route-table/rtb-0ac2bc9f18bee3238",
            "id": "rtb-0ac2bc9f18bee3238",
            "owner_id": "982063376835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07e22053a30db771c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-081eb28a7eb606c26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982063376835:route-table/rtb-06de3c3992c3d6800",
            "id": "rtb-06de3c3992c3d6800",
            "owner_id": "982063376835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f0bf9f9321a7fe34",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-081eb28a7eb606c26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_table",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982063376835:route-table/rtb-01b994bed192a5e10",
            "id": "rtb-01b994bed192a5e10",
            "owner_id": "982063376835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04061ac732fef96b6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-081eb28a7eb606c26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_private_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7aca4742f162242",
            "route_table_id": "rtb-0ac2bc9f18bee3238",
            "subnet_id": "subnet-0e128ec33097fb11b"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.private_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016be0fbe5f42bac2",
            "route_table_id": "rtb-06de3c3992c3d6800",
            "subnet_id": "subnet-0bb417653370e3b0d"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.private_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_public_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03311f64329875146",
            "route_table_id": "rtb-01b994bed192a5e10",
            "subnet_id": "subnet-0564a220edf14ef44"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd30e3b303024a31",
            "route_table_id": "rtb-01b994bed192a5e10",
            "subnet_id": "subnet-0b324e15ab8f01d86"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_groups",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "custom-security-group",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982063376835:security-group/sg-0c71767a2ac57ccab",
            "description": "Inbound \u0026 Outbound traffic for custom-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c71767a2ac57ccab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "custom-security-group",
            "name_prefix": "",
            "owner_id": "982063376835",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-081eb28a7eb606c26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982063376835:subnet/subnet-0e128ec33097fb11b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "141.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e128ec33097fb11b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982063376835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-0"
            },
            "tags_all": {
              "Name": "private_subnet-0"
            },
            "vpc_id": "vpc-081eb28a7eb606c26"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982063376835:subnet/subnet-0bb417653370e3b0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "141.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb417653370e3b0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982063376835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-1"
            },
            "tags_all": {
              "Name": "private_subnet-1"
            },
            "vpc_id": "vpc-081eb28a7eb606c26"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982063376835:subnet/subnet-0564a220edf14ef44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "141.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0564a220edf14ef44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "982063376835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-0"
            },
            "tags_all": {
              "Name": "public_subnet-0"
            },
            "vpc_id": "vpc-081eb28a7eb606c26"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982063376835:subnet/subnet-0b324e15ab8f01d86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "141.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b324e15ab8f01d86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "982063376835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-1"
            },
            "tags_all": {
              "Name": "public_subnet-1"
            },
            "vpc_id": "vpc-081eb28a7eb606c26"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982063376835:vpc/vpc-081eb28a7eb606c26",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "141.0.0.0/16",
            "default_network_acl_id": "acl-08cfe10b57d576a8f",
            "default_route_table_id": "rtb-0adbff7c7cab639ed",
            "default_security_group_id": "sg-0fbf68a62012cf7b2",
            "dhcp_options_id": "dopt-09a260f72d16e313f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-081eb28a7eb606c26",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0adbff7c7cab639ed",
            "owner_id": "982063376835",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}